--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "debug": "nodemon ."
+    "debug": "nodemon --inspect ./bin/www",
+    "db:create": "createdb --echo amazon-dev",
+    "db:drop": "dropdb --echo amazon-dev"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
@@ -13,6 +15,10 @@
     "express": "~4.14.1",
     "morgan": "~1.7.0",
     "pug": "~2.0.0-beta10",
+    "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.30.4",
+    "sequelize-cli": "^2.7.0",
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
