--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "faker": "^4.1.0",
     "morgan": "~1.7.0",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
