--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "faker": "^4.1.0",
+    "method-override": "^2.3.8",
     "morgan": "~1.7.0",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
